src/App.css
.App {
  text-align: center;
}
body {
  margin: 0;
  height: 100%;
  overflow-x: hidden;
}
body {
  background-attachment: fixed;
}

.messenger {
  background: -webkit-linear-gradient(
    45deg,
    rgb(133, 29, 186) 15%,
    rgba(255, 0, 224, 1) 100%
  );
  align-self: center;
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.blackName {
  color: rgb(0, 0, 0);
}

.speak {
  margin-right: 5px;
}
.copy {
  margin-right: -1rem
}
/*====================== new navbar ==========================*/

:root {
  --background1: rgb(19, 31, 49);
  --background2: rgba(13, 18, 26, 0.94);
  --backgroundforapp: rgb(18, 20, 22);
  --textcolour: rgb(237, 229, 229);
  --secondarycolor: #8735d0;
  --navbarcolor: #f5b921;
  --navbarhovercolor: #ffdd41;
}

.navbar {
  background-color: rgb(255, 255, 255);
  height: 65px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 2rem;
  position: sticky;
  top: 0;
  z-index: 20;
  box-shadow: 0 4px 8px 0 rgba(253, 251, 251, 0.2),
    0 6px 10px 0 rgba(173, 173, 173, 0.844);
}
.nav_dark {
  background-color: rgb(0, 0, 0);
  height: 65px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 2rem;
  position: sticky;
  top: 0;
  z-index: 20;
  box-shadow: 0 4px 8px 0 rgba(253, 251, 251, 0.2),
    0 6px 10px 0 rgba(0, 0, 0, 0.844);
}
.nav-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 0px;
  max-width: 1500px;
}

.nav-logo {
  color: var(--secondarycolor);
  align-items: center;
  margin-left: 20px;
  cursor: pointer;
  text-decoration: none;
  font-size: 2rem;
  flex-grow: 1;
}

a {
  text-decoration: none;
}

.nav-menu {
  display: flex;
  list-style: none;
  text-align: center;
  margin-right: 2rem;
}

.nav-links {
  background: -webkit-linear-gradient(
    45deg,
    rgb(133, 29, 186) 15%,
    rgba(255, 0, 224, 1) 100%
  );

  align-self: center;
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  text-decoration: none;
  padding: 0.5rem 1rem;
  height: 100%;
  border-bottom: 3px solid transparent;
}

.fa-code {
  margin-left: 1rem;
}

.nav-item {
  line-height: 40px;
  margin-right: 1rem;
}

.toggle-nav {
  outline: none;
  background-color: rgba(128, 0, 128, 0);
}
.nav-item:after {
  content: "";
  display: block;
  height: 3px;
  width: 0;
  background: transparent;
  transition: width 0.7s ease, black 0.5s ease;
}
.darkthemeicon {
  color: rgb(148, 3, 148);
}
.nav-item:hover:after {
  width: 100%;
  background: var(--secondarycolor);
}

.nav-icon {
  display: none;
}

@media (max-width: 500px) {
  .navbar,
  .nav-menu,
  .nav_dark {
    font-size: large;
  }
}

/* ================== end of new navbar ==================== */

input {
  line-height: 25px;
  width: 98%;
  border-radius: 30px;
  outline-width: 0;
  padding: 10px;
  border: 1px solid white;
}

.dark_input {
  background-color: transparent;
  border: none;
  margin-right: 3px;
  margin-left: 3px;
}

.loading {
  position: fixed;
  z-index: 1;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  margin: auto;
}

@media (max-width: 450px) {
  .Logo {
    width: auto;
    height: 20px;
    align-self: center;
  }
}

.messenger {
  font-weight: bold;
  font-size: 40px;
  margin: 0.25em;
}

@media (min-width: 500px) {
  .messenger {
    font-size: 40px;
  }
}

@media (max-width: 500px) {
  .messenger {
    font-size: 35px;
  }
}

@media (max-width: 350px) {
  .messenger {
    font-size: 20px;
  }
}
footer {
  position: fixed;
  bottom: 0;
  padding-bottom: 0;
  height: 9.5%;
  width: 100%;
}

@media (max-width: 450px) {
  footer {
    width: 99.6%;
    margin: 0px 1px;
    height: 11.5%;
  }
  .content__footer {
    padding-right: 16px;
    padding-left: 3px;
  }
}

.input {
  margin-top: 7px;
  margin-bottom: 7px;
  flex: 1;
}

.BlackNavBar {
  background-color: black;
  border-bottom: 1px solid white;
}

.footer_dark {
  color: white;
  padding-bottom: 5px;
}

.content__footer {
  padding-top: 8px;
  padding-bottom: 0;
  position: fixed;
  left: 0;
  bottom: 0;
  margin: 0;
  width: 100%;
}
.iconButton {
  top: 15px;
  left: 10px;
}

.sendNewMessage {
  background-color: rgb(235, 235, 235);
  border: 3px solid #d0d0d0;
  width: 60%;
  max-width: 1400px;
  margin: 0 auto;
  display: flex;
  height: 100%;
  justify-content: space-between;
  align-items: center;
  padding: 10px;
  border-radius: 8px;
}

.sendNewMessagedark {
  background-image: linear-gradient(to right, rgb(24, 17, 17), rgb(85 6 101));
  border: 2px solid #d0d0d0;
  width: 60%;
  padding: 2px;
  border-radius: 8px;
  color: white;
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content: center;
}

.sendNewMessage button {
  width: 36px;
  height: 36px;
  background-color: #ecefff;
  border: none;
  box-shadow: none;
  outline: none;
  cursor: pointer;
  font-size: 16px;
  color: rgb(0, 50, 77);
  padding: 0;
  border: 3px solid #d0d0d0;
  border-radius: 5px;
  line-height: 36px;
  transition: all 0.3s cubic-bezier(0.88, 0.19, 0.37, 1.11);
}

.sendNewMessagedark button {
  width: 36px;
  height: 36px;
  background-color: #ecefff;
  border: none;
  box-shadow: none;
  outline: none;
  cursor: pointer;
  font-size: 16px;
  color: rgb(0, 50, 77);
  padding: 0;
  border-radius: 5px;
  line-height: 36px;
  transition: all 0.3s cubic-bezier(0.88, 0.19, 0.37, 1.11);
}

@media (max-width: 864px) {
  .sendNewMessage {
    width: 97%;
  }
}

.sendNewMessagedark > .darkButton {
  color: black !important;
}
.sendNewMessagedark > .darkButtonSend {
  background-color: white !important;
  background-color: white !important;
  color: black !important;
}

@media (max-width: 864px) {
  .sendNewMessage {
    width: 97%;
  }
}

.sendNewMessage > .darkButton {
  color: black !important;
}
.sendNewMessage > .darkButtonSend {
  background-color: white !important;
  background-color: white !important;
  color: black !important;
}

.addfiles {
  margin-right: 5px;
}

.sendNewMessage button:hover {
  transform: scale(1.2);
}
.sendNewMessage button i {
  display: block;
}
.sendNewMessage input {
  flex-grow: 1;
  padding: 0 15px;
  background-color: transparent;
  border: none;
  outline: none;
}

.footer_dark .sendNewMessage {
  background-color: black;
}

.footer_dark input,
.footer_dark ::placeholder {
  color: white;
}
#sendMsgBtn {
  background-color: rgb(0, 50, 77);
  color: #fff;
}

@media (max-width: 700px) {
  .sendNewMessage {
    width: 98.5%;
    max-width: 700px;
  }
}

@media (max-width: 790px) {
  .sendNewMessage {
    width: 95%;
  }
}

@media (max-width: 430px) {
  .sendNewMessage {
    width: 90%;
    margin-right: 8px;
  }
}
.EmojiToggle {
  float: right;
  border: none;
  margin: 0;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
}
.KeyboardToggle {
  margin: 0 0 0 5px;
}
.EmojiPicker {
  position: absolute;
  bottom: 64px;
}
.EmojiPicker_dark {
  position: absolute;
  bottom: 64px;
  margin-left: -250px;
}
.KeyboardPicker {
  position: absolute;
  width: 800px;
  bottom: 64px;
}
.KeyboardPicker_dark {
  position: absolute;
  width: 800px;
  bottom: 70px;
  color: black;
  background-color: transparent;
}

.Speaknow_alert {
  position: absolute;
  bottom: 64px;
  font-size: 18px;
  width: 130px;
  height: 45px;
  margin-left: -52px;
  display: flex;
  color: white;
  border-radius: 10px;
  background: rgb(0, 50, 77);
  align-items: center;
  justify-content: center;
  border: 2px solid rgb(255, 0, 0);
}
.scrolltobottom {
  position: fixed;
  bottom: 15px;
  right: 30px;
  z-index: 99;
  font-size: 18px;
  background-color: rgb(0, 50, 77);
  color: white;
  cursor: pointer;
  border-radius: 50px;
}

.scrolltobottomdark {
  position: fixed;
  bottom: 15px;
  right: 30px;
  z-index: 99;
  font-size: 18px;
  cursor: pointer;
  border-radius: 50px;
  background-color: white !important;
}

.scrollicon {
  color: rgb(255, 255, 255);
}

.scrollicondark {
  color: #8735d0;
}

.loadOlderMessages {
  margin: 0 auto;
  color: #9240da;
  cursor: pointer;
  border-radius: 5px;
  border: 3px solid #9240da;
  padding: 10px 20px;
  font-size: 1.75rem;
  font-weight: bold;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  transition: all 0.5s ease-in-out;
  box-shadow: 0px -1px 5px -3px rgb(106, 101, 145);
  -webkit-box-shadow: 0px -1px 36px -3px rgb(106, 101, 145);

    -moz-box-shadow: 0px -1px 36px -3px rgb(106, 101, 145);
  }
  
  .loadOlderMessages:hover {
    background: linear-gradient( to right, #9240da, #d643f3 );
    color: rgb(255, 255, 255);
    border: 3px solid rgb(255, 255, 255);
    box-shadow: 0 4px 8px 0 #9240da, 0px -1px 5px -3px #d643f3, 0 6px 10px 0 #8735d0;

}

@media screen and (max-width: 960px) {
  .nav-menu {
    display: flex;
    flex-direction: column;
    width: 100%;
    border-top: 1pxsolid #fff;
    position: absolute;
    top: 60px;
    left: -110%;
    opacity: 0;
    transition: all 0.5s ease;
  }
  .scrolltobottom {
    left: 45%;
    right: 45%;
    bottom: 75px;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .nav-menu.active {
    background: rgb(22, 21, 21);
    left: 0px;
    opacity: 1;
    transition: all 0.5s ease;
    z-index: 1;
  }

  #nav-menu_dark {
    background: rgb(0, 0, 0);
  }
  #nav-menu_light {
    background: rgb(255, 255, 255);
  }

  .nav-item a:active {
    border: none;
  }
  .nav-item {
    border: none;
    margin: 25px 0px;
    outline: none;
  }

  .nav-item:hover {
    transform: scale(1.2);
  }

  .nav-item:hover:after {
    width: 100%;
  }

  .toggle-nav:hover:after {
    background: none;
  }

  .nav-links {
    padding: 1.5rem;
    margin-left: -70px;
    border: none;
  }

  .nav-icon {
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    transform: translate(-100%, 60%);
    font-size: 3rem;
    cursor: pointer;
  }
  .nav-icon_dark {
    color: rgb(252, 249, 249);
  }
  .nav-icon_light {
    color: rgb(0, 0, 0);
  }

  .toggle-button {
    margin-right: 70px !important;
  }
}

